@@ -63,7 +63,7 @@ abstract class Task implements Writable, Configurable {
     COMBINE_INPUT_RECORDS,
     COMBINE_OUTPUT_RECORDS,
     REDUCE_INPUT_GROUPS,
-    REDUCE_INPUT_BYTES, 
+    REDUCE_SHUFFLE_BYTES,
     REDUCE_INPUT_RECORDS,
     REDUCE_OUTPUT_RECORDS,
     REDUCE_SKIPPED_GROUPS,
